--- a/res/layout/widget_qmhd.xml
+++ b/res/layout/widget_qmhd.xml
@@ -7,8 +7,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="4"
+        android:layout_height="wrap_content"
         android:background="@color/marron"
         android:orientation="horizontal" >
 
@@ -31,13 +30,13 @@
             android:layout_gravity="end"
             android:layout_weight="1"
             android:contentDescription="@string/app_name"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/ic_launcherwidget" />
 
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dip"
         android:layout_weight="1"
         android:background="@color/rosado"
         android:orientation="vertical" >
